--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,15 @@
 {
   "dependencies": {
-    "com.unity.cinemachine": "2.9.5",
+    "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.0.4",
+    "com.unity.collections": "2.1.1",
+    "com.unity.entities": "1.0.0-pre.65",
+    "com.unity.entities.graphics": "1.0.0-pre.65",
     "com.unity.ide.rider": "3.0.21",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.mathematics": "1.2.6",
+    "com.unity.physics": "1.0.0-pre.65",
     "com.unity.probuilder": "5.0.7",
     "com.unity.recorder": "4.0.0",
     "com.unity.render-pipelines.universal": "14.0.7",
